--- a/electron/package.json
+++ b/electron/package.json
@@ -16,10 +16,11 @@
     "start": "electron-forge start .",
     "start:debug": "electron-forge start --inspect-electron .",
     "package": "electron-forge package .",
+    "update:image": "cp ./../docker/exported/accessmod-docker.tar.gz ./app/docker/accessmod-docker.tar.gz",
     "make:win": "electron-forge make -p win32 .",
     "make:mac": "electron-forge make -p darwin .",
     "make:win_with_docker": "./makers_docker/make_win.sh make:win",
-    "make": "yarn make:mac && yarn make:win_with_docker"
+    "make": "yarn update:image && yarn make:mac && yarn make:win_with_docker"
   },
   "repository": "https://github.com/fxi/AccessMod_shiny",
   "keywords": [
@@ -49,6 +50,8 @@
     "get-port": "^5.1.1",
     "internet-available": "^1.0.0",
     "module-alias": "^2.2.2",
+    "node-fetch": "^2.6.6",
+    "semver": "^7.3.5",
     "stream-to-promise": "^3.0.0",
     "yaml": "^2.0.0-3"
   },
