Electron : updated update:image script. Force old image removal before copying the new one

--- a/electron/package.json
+++ b/electron/package.json
@@ -16,8 +16,8 @@
     "start": "electron-forge start .",
     "start:debug": "electron-forge start --inspect-electron .",
     "package": "electron-forge package .",
-    "update:image_archive": "cp ./../docker/exported/accessmod-docker.tar.gz ./app/docker/accessmod-docker.tar.gz",
-    "update:image_meta": "cp ./../docker/exported/meta.json ./app/docker/meta.json",
+    "update:image_archive": "rm -rf ./app/docker/accessmod-docker.tar.gz && cp ./../docker/exported/accessmod-docker.tar.gz ./app/docker/accessmod-docker.tar.gz",
+    "update:image_meta": "rm -rf ./app/docker/meta.json && cp ./../docker/exported/meta.json ./app/docker/meta.json",
     "update:image": "yarn update:image_archive && yarn update:image_meta",
     "make:win": "electron-forge make -p win32 .",
     "make:mac": "electron-forge make -p darwin .",
