--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  am5_dev: # grass + r + app
-    image: fredmoser/accessmod:5.7.18
+  am5_dev: # base image + copy file from app 
+    image: fredmoser/accessmod_base:5.7
     ports:
       - '3080:3000' # Interactive session app (same as Dockerfile)
       - '5080:5000' # Interactive session http (same as Dockerfile)
@@ -18,12 +18,18 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - am5_dev_tmp:/tmp
-      #- am5_dev_data:/data/dbgrass
+      #- am5_dev_data:/data/dbgrass # docker volume instead of bind
       - am5_dev_cache:/data/cache
       - am5_dev_logs:/data/logs
+      - type: bind # shared data, e.g. output of replay 
+        source: ./_shared
+        target: /data/shared
       - type: bind
         source: ./_dbgrass
         target: /data/dbgrass
+      - type: bind
+        source: .
+        target: /app
       - type: bind
         source: .
         target: /appdev
