--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM fredmoser/accessmod_base:5.7-rc1
+FROM fredmoser/accessmod_base:5.7-r2
 LABEL maintainer="frederic.moser@unige.ch"
 WORKDIR /app
 # Copy context is expected to be app root
