--- a/docker/alpine_base/Dockerfile
+++ b/docker/alpine_base/Dockerfile
@@ -1,32 +1,27 @@
-ARG ALPINE_VERSION=3.15.4
-ARG GRASS_VERSION=8.0.1
 ARG R_VERSION=4.1.3
+ARG GRASS_VERSION=8.0.2
 ARG R_PACKAGES_DATE=2022-04-01
+ARG GDAL_VERSION=3.4.3
 
 # Based on:
 # https://github.com/OSGeo/grass/blob/releasebranch_8_0/docker/alpine/Dockerfile 
 # https://github.com/mundialis/docker-grass-gis/blob/master/Dockerfile
 # https://github.com/r-hub/r-minimal/blob/master/Dockerfile
 
-
-
 #------------------------------------------------------------------------------#
-# Common : base for R and GRASS 
-# ( r-minimal : arm + amd ok )
+# Common : r, gdal, proj  
 #------------------------------------------------------------------------------#
-FROM rhub/r-minimal:${R_VERSION} as rbase
-FROM alpine:${ALPINE_VERSION} as common
+FROM osgeo/gdal:alpine-small-${GDAL_VERSION} as gdalproj
+FROM rhub/r-minimal:${R_VERSION} as common
 
-USER root
+ARG GDAL_VERSION
 
 LABEL authors="Frederic Moser"
 LABEL maintainer="frederic.moser@unige.ch"
 
-COPY --from=rbase /usr/local /usr/local
-
-RUN echo "Install GRASS runtime dependencies" &\
-    apk update &\
-    apk add --no-cache \
+# https://grasswiki.osgeo.org/wiki/Compile_and_Install#Alpine_Linux
+RUN echo "Install GRASS runtime" &\
+      apk add --no-cache \
       bash \
       bison \
       bzip2 \
@@ -34,8 +29,6 @@ RUN echo "Install GRASS runtime dependencies" &\
       fftw \
       flex \
       freetype \
-      gdal \
-      gdal-tools \
       gettext \
       geos \
       gnutls \
@@ -47,6 +40,7 @@ RUN echo "Install GRASS runtime dependencies" &\
       libjpeg-turbo \
       libpng \
       libunwind \
+      libpq \
       musl \
       musl-utils \
       ncurses \
@@ -56,28 +50,15 @@ RUN echo "Install GRASS runtime dependencies" &\
       py3-numpy \
       py3-pillow \
       py3-six \
-      postgresql \
-      proj-util \
       sqlite \
       sqlite-libs \
-      subversion \
       tiff \
       wget \
       zstd \
-      zstd-libs 
+      zstd-libs
       
-RUN echo "Install R runtime dep" &\
+RUN echo "(re) Install R runtime deps" &\
       apk add --no-cache \
-      libpng \
-      libxml2 \
-      icu-libs \
-      sqlite \
-      geos \
-      tar \
-      proj \
-      zip \
-      unzip \
-      ca-certificates \
       libgfortran \
       xz-libs \
       libcurl \
@@ -86,6 +67,31 @@ RUN echo "Install R runtime dep" &\
       pcre2 \
       make \
       readline
+
+RUN echo "Install accessmod runtime dep" &\
+      apk add --no-cache \
+      libpng \
+      file \
+      libxml2 \
+      sqlite \
+      geos \
+      tar \
+      zip \
+      unzip \
+      ca-certificates
+
+COPY --from=gdalproj /usr/lib/ /usr/lib/
+COPY --from=gdalproj /usr/bin/ /usr/bin/
+COPY --from=gdalproj /usr/include/ /usr/include/
+COPY --from=gdalproj /usr/share/proj/ /usr/share/proj/
+COPY --from=gdalproj /usr/share/gdal/ /usr/share/gdal/
+
+#
+# Fix libgdal 
+# Note: if compile 3.5, grass looks for so.30, if 3.4, so.28  
+#
+RUN ln -s /usr/lib/libgdal.so."$GDAL_VERSION" /usr/lib/libgdal.so & \
+    ln -s /usr/lib/libgdal.so /usr/lib/libgdal.so.28 
 
 #------------------------------------------------------------------------------#
 # Build GRASS 
@@ -96,15 +102,17 @@ ARG GRASS_VERSION
 
 WORKDIR /build
 
+
 # Download and extract sources
 RUN echo "Download grass version ${GRASS_VERSION}" && \
     wget -O grass.tar.gz \
     https://github.com/OSGeo/grass/archive/refs/tags/${GRASS_VERSION}.tar.gz && \
     tar --extract --file grass.tar.gz --strip-components 1
 
+
 # GRASS dev packages
 RUN echo "Install GRASS DEV packages" && \
-    apk add --no-cache \
+    apk add --no-cache  -t _grass_dev \
       build-base \
       bzip2-dev \
       cairo-dev \
@@ -112,7 +120,6 @@ RUN echo "Install GRASS DEV packages" && \
       freetype-dev \
       g++ \
       gcc \
-      gdal-dev \
       geos-dev \
       gnutls-dev \
       libc6-compat \
@@ -121,28 +128,29 @@ RUN echo "Install GRASS DEV packages" && \
       make \
       openjpeg-dev \
       openblas-dev \
-      proj-dev \
       python3-dev \
+      py3-setuptools \
       py3-numpy-dev \
       sqlite-dev \
       tiff-dev \
       zstd-dev
-
-
+       
 # set configuration options, without wxGUI
 ENV GRASS_CONFIG="\
       --enable-largefile \
       --with-cxx \
       --with-proj-share=/usr/share/proj \
-      --with-gdal \
+      --with-gdal=/usr/bin/gdal-config \
       --with-geos \
       --with-sqlite \
       --with-bzlib \
       --with-zstd \
       --with-cairo --with-cairo-ldflags=-lfontconfig \
       --with-fftw \
+      --without-x \
       --without-pdal \
       --without-postgres \
+      --without-wxwidgets \
       --without-openmp \
       --without-freetype \
       --without-opengl \
@@ -152,27 +160,28 @@ ENV GRASS_CONFIG="\
       --without-ffmpeg \
       "
 
-# Set environmental variables for GRASS GIS compilation, without debug symbols
-ENV MYCFLAGS="-O2 -std=gnu99 --march=native" \
-    MYLDFLAGS="-s -Wl,--no-undefined -lblas" \
-    # CXX stuff:
-    LD_LIBRARY_PATH="/usr/local/lib" \
-    LDFLAGS="$MYLDFLAGS" \
-    CFLAGS="$MYCFLAGS" \
-    CXXFLAGS="$MYCXXFLAGS" \
-    NUMTHREADS=2
+# Build r.walk.accessmod
+COPY modules/r.walk.accessmod r.walk.accessmod
 
 # Configure compile and install GRASS GIS
 RUN echo "Configure and compile grass" && \
+    CFLAGS_X86="--march=x86-64 -m64" && \
+    CFLAGS_ARM="--march=armv8.5-a -mcpu=apple-a14" && \
+    CFLAGS="-Ofast -std=gnu99 " && \
+    if test $(arch) = "aarch64"; then \
+    CFLAGS="$CFLAGS $CFLAGS_ARM"; \
+    else \ 
+    CFLAGS="$CFLAGS $CFLAGS_X86"; \
+    fi &&\
+    LDFLAGS="-s -Wl,--no-undefined -lblas" &&\
+    LD_LIBRARY_PATH="/usr/local/lib" && \
+    CXXFLAGS="$MYCXXFLAGS" &&\
     ./configure $GRASS_CONFIG && \
-    make -j $NUMTHREADS && \
+    make -j $(nproc --all) && \
     make install && \
-    ldconfig /etc/ld.so.conf.d
-
-# Build r.walk.accessmod (last step of build : will change)
-COPY modules/r.walk.accessmod r.walk.accessmod
-RUN cd r.walk.accessmod && \
-     make MODULE_TOPDIR=/usr/local/grass80
+    ldconfig /etc/ld.so.conf.d && \
+    cd r.walk.accessmod && \
+    make MODULE_TOPDIR=/usr/local/grass80
 
 # Reduce the image size - Remove unnecessary grass files
 RUN cp /usr/local/grass80/gui/wxpython/xml/module_items.xml module_items.xml; \
@@ -181,9 +190,8 @@ RUN cp /usr/local/grass80/gui/wxpython/xml/module_items.xml module_items.xml; \
     rm -rf /usr/local/grass80/gui; \
     rm -rf /usr/local/grass80/share; \
     mkdir -p /usr/local/grass80/gui/wxpython/xml/; \
-    mv module_items.xml /usr/local/grass80/gui/wxpython/xml/module_items.xml;
-
-
+    mv module_items.xml /usr/local/grass80/gui/wxpython/xml/module_items.xml; \
+    apk del _grass_dev
 
 #------------------------------------------------------------------------------#
 # Build R packages
@@ -192,18 +200,18 @@ FROM common as build_r
 
 ARG R_PACKAGES_DATE
 
-
+#
+# If not using proj + gdal libs from common, gdal-dev proj-dev 
+#
 RUN echo "Install R dev packages" && \
-      apk add --no-cache \
+      apk add --no-cache  -t _r_dev \
       linux-headers \
       build-base \
       R-dev \
       libressl-dev \
       libxml2-dev \
-      gdal-dev \
       geos-dev \
       tiff-dev \
-      proj-dev \
       libpng-dev \
       pcre2-dev \
       sqlite-dev \
@@ -224,8 +232,8 @@ rep <- getOption('repos');\
 rep['CRAN'] <- 'https://mran.microsoft.com/snapshot/$R_PACKAGES_DATE';\
 options(Ncpus = $(nproc --all));\
 options(repos = rep); \
-install = function(pkg){ \
-  install.packages(pkg); \
+install = function(pkg,...){ \
+  install.packages(pkg,...); \
   tryCatch(library(pkg,character.only=T), \
       error = function(e){ \
       print(e);\
@@ -234,11 +242,11 @@ install = function(pkg){ \
 }" > .Rprofile
 
 # Utils
+RUN Rscript -e 'install("remotes")'
 RUN Rscript -e 'install("foreign")' 
 RUN Rscript -e 'install("R.utils")'
 RUN Rscript -e 'install("memoise")'
-RUN Rscript -e 'install("parallel")'
-RUN Rscript -e 'install("remotes")'
+RUN Rscript -e 'install("parallel")' # base package: make sure it loads
 RUN Rscript -e 'install("future")'
 RUN Rscript -e 'install("promises")'
 RUN Rscript -e 'install("R6")'
@@ -248,39 +256,40 @@ RUN Rscript -e 'install("semver")'
 # Shiny / UI / widget
 RUN Rscript -e 'install("httpuv")'
 RUN Rscript -e 'install("shiny")'
-RUN Rscript -e 'install("leaflet")'
 RUN Rscript -e 'install("shinydashboard")'
+RUN Rscript -e 'install("leaflet")'
 
-# Data / geo spatial
-RUN Rscript -e 'install("rgdal")'
-RUN Rscript -e 'install("gdalUtils")'
-RUN Rscript -e 'install("xml2")'
-
+# Data i/o 
 # see https://github.com/tidyverse/readxl/pull/687
 RUN Rscript -e 'remotes::install_github("struckma/readxl")'
+RUN Rscript -e 'install("xml2")'
 RUN Rscript -e 'install("RSQLite")'
 RUN Rscript -e 'install("rio")'
-RUN Rscript -e 'install("sp")'
-RUN Rscript -e 'install("rgeos")'
-RUN Rscript -e 'install("raster")'
-RUN Rscript -e 'install("rgrass7")'
+RUN Rscript -e 'install("pool")'
 
 # Data manipulation
 RUN Rscript -e 'install("data.table")'
 RUN Rscript -e 'install("plyr")'
 RUN Rscript -e 'install("dplyr")' #NOTE: do not use with plyr?..
 RUN Rscript -e 'install("stringr")'
-RUN Rscript -e 'install("pool")'
+
+# Geospatial
+RUN Rscript -e 'install("rgdal")'
+RUN Rscript -e 'install("gdalUtils")'
+RUN Rscript -e 'install("sp")'
+RUN Rscript -e 'install("rgeos")'
+RUN Rscript -e 'install("raster")'
+RUN Rscript -e 'install("rgrass7")'
 
 
 # Github version : fix data corruption issue during upload (https://github.com/rstudio/shiny/issues/3429) 
-RUN Rscript -e ' remotes::install_github("r-lib/later")'
+#RUN Rscript -e ' remotes::install_github("r-lib/later")'
 
 # Version management
 
 # Clean 
-RUN Rscript -e 'remove.packages("remotes")'
-
+RUN Rscript -e 'remove.packages("remotes")' & \
+    apk del _r_dev  
 
 #------------------------------------------------------------------------------#
 # CLEANING
@@ -302,7 +311,12 @@ COPY --from=build_r /usr/local/lib/R /usr/local/lib/R
 # Remove unused file
 RUN find / -name '*.pyc' -delete && \
     find /usr/local/grass/docs/ -name '*.jpg' -exec sh -c '> {}' \; &&\
-    find /usr/local/grass/docs/ -name '*.png' -exec sh -c '> {}' \;
+    find /usr/local/grass/docs/ -name '*.png' -exec sh -c '> {}' \; &&\
+    rm -rf /var/cache/apk/* && \
+    find /usr/local/lib/R/library/ -type f -path '*/include/*' -name '*.h' -delete && \
+    find /usr/local/lib/R/library/ -type f -path '*/include/*' -name '*.hpp' -delete && \
+    find /usr/local/lib/R/library/ -type f -path '*/po/*' -name '*.mo' -delete && \
+    find /usr/local/lib/R/library/ -type f -path '*/doc/*' -name '*.pdf' -delete;
 
 #------------------------------------------------------------------------------#
 #  TESTING : check if everything is ok (requires --target = test )
@@ -336,14 +350,10 @@ RUN echo "Loading GRASS, R + dependencies seems ok"
 #------------------------------------------------------------------------------#
 #  FINAL : remove layers, set env
 #------------------------------------------------------------------------------#
-FROM alpine:${ALPINE_VERSION} as final
+FROM scratch as final
 
-COPY --from=clean / /
+COPY --from=clean . .
 
-# To add in common step, remove in R dev
-RUN apk add file
-
-# Don't force GRASS_OVERWRITE=1, it prevents features to be 
 # appended to existing ones.
 ENV AM5_PORT_HTTP=5000 \
     AM5_PORT_HTTP_PUBLIC=5080 \
@@ -364,8 +374,7 @@ ENV AM5_PORT_HTTP=5000 \
     GRASSBIN="/usr/local/bin/grass" \
     GRASS_SKIP_MAPSET_OWNER_CHECK=1 \
     GRASS_PYTHON="python3" \
-    GISBASE="/usr/local/grass"\
-    GRASS_OVERWRITE=0
+    GISBASE="/usr/local/grass"
 
 # composed env
 ENV GISDBASE="${AM5_DB_PATH}"
@@ -381,6 +390,13 @@ RUN mkdir -p ${AM5_DB_PATH} \
     mkdir -p ${AM5_CACHE_PATH} 
 
 ADD data/demo ${AM5_DB_PATH}/demo
+
+#
+# ⚠️  To be added in common 
+#
+
+# required by rio/stringi
+RUN apk add 'icu-libs'
 
 WORKDIR /app
 
