--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,17 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - am5_dev_tmp:/tmp
-      #- am5_dev_data:/data/dbgrass # docker volume instead of bind
+      # uncomment for docker volume:
+      - am5_dev_data:/data/dbgrass # docker volume instead of bind
       - am5_dev_cache:/data/cache
       - am5_dev_logs:/data/logs
-      - type: bind # shared data, e.g. output of replay 
+      - type: bind # shared data, e.g. input/output for replay / batch 
         source: ./_shared
         target: /data/shared
-      - type: bind
-        source: ./_dbgrass
-        target: /data/dbgrass
+      # comment if docker volume:
+     # - type: bind
+        #source: ./_dbgrass
+        #target: /data/dbgrass
       - type: bind
         source: .
         target: /app
