Patch GRASS r.class to solve issue #397

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM fredmoser/accessmod_base:5.7-b
+FROM fredmoser/accessmod_base:5.7-c
 LABEL maintainer="frederic.moser@unige.ch"
 WORKDIR /app
 # Copy context is expected to be app root
