Force remplacing zip/unzip commands

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,14 @@
 FROM fredmoser/accessmod_base:5.7-d
 LABEL maintainer="frederic.moser@unige.ch"
 WORKDIR /app
+
+# To add in main build
+RUN echo "Ensures that busybox zip and unzip are removed" &\
+      apk del zip unzip &&\
+      apk add --no-cache \
+          zip \
+          unzip
+
 # Copy context is expected to be app root
 COPY . .
 CMD Rscript --vanilla run.r
