ci : gh action test

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,11 @@ Session.vim
 .language
 
 #
+# Secrets : actions, etc..
+#
+.secrets
+
+#
 # Docker exported image 
 # - For electron launcher offline init.
 #
