packer requires hcl2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,7 @@ jobs:
         working-directory: ./packer
         run: |
            ./update_config.sh
-           packer validate alpine.json
-           packer init alpine.json
-           packer build -force alpine.json
+           packer hcl2_upgrade alpine.json -output-file=alpine.hcl
+           packer validate alpine.hcl
+           packer init alpine.hcl
+           packer build -force alpine.hcl
