--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Run Packer
     steps:
+      - name: Install VirtualBox
+        run: |
+         sudo apt-get update
+         sudo apt-get install -y virtualbox
+
       - name: Checkout
         uses: actions/checkout@v3
 
