--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,55 +10,76 @@ env:
   PACKER_VERSION: '1.8.6'
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Get version
-        id: get_version
-        #run: echo "VERSION=$(cat version.txt)" >> $GITHUB_ENV
-        run: echo "VERSION=ci" >> $GITHUB_ENV
-
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./docker/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ env.REPO_NAME }}/${{ env.APP_NAME }}:${{ env.VERSION }}
+  #  docker:
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - name: Checkout
+  #        uses: actions/checkout@v4
+  #
+  #      - name: Set up QEMU
+  #        uses: docker/setup-qemu-action@v3
+  #
+  #      - name: Set up Docker Buildx
+  #        uses: docker/setup-buildx-action@v3
+  #
+  #      - name: Login to Docker Hub
+  #        uses: docker/login-action@v3
+  #        with:
+  #          username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #
+  #      - name: Get version
+  #        id: get_version
+  #        run: echo "VERSION=$(cat version.txt)" >> $GITHUB_ENV
+  #
+  #      - name: Build and push
+  #        uses: docker/build-push-action@v5
+  #        with:
+  #          context: .
+  #          file: ./docker/Dockerfile
+  #          platforms: linux/amd64,linux/arm64
+  #          push: true
+  #          tags: ${{ env.REPO_NAME }}/${{ env.APP_NAME }}:${{ env.VERSION }}
 
   packer:
     runs-on: ubuntu-latest
-    name: Run Packer
+    name: Run Packer 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Install VirtualBox
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y virtualbox
 
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
         with:
           version: ${{ env.PACKER_VERSION }}
-      - name: Run Packer
+
+      - name: Install Packer Plugin for VirtualBox
+        run: packer plugins install github.com/hashicorp/virtualbox
+
+      - name: Update Packer Configuration
         working-directory: ./packer
-        run: |
-           ./update_config.sh
-           packer plugins install github.com/hashicorp/virtualbox
-           packer hcl2_upgrade alpine.json
-           packer validate alpine.json.pkr.hcl
-           packer init alpine.json.pkr.hcl
-           packer build -force alpine.json.pkr.hcl
+        run: ./update_config.sh
+
+      - name: Upgrade Packer Template to HCL2
+        working-directory: ./packer
+        run: packer hcl2_upgrade alpine.json
+
+      - name: Validate Packer Template
+        working-directory: ./packer
+        run: packer validate alpine.json.pkr.hcl
+
+      - name: Initialize Packer Configuration
+        working-directory: ./packer
+        run: packer init alpine.json.pkr.hcl
+
+      - name: Build with Packer
+        working-directory: ./packer
+        run: packer build -force alpine.json.pkr.hcl
+
+
+
