Added workflow_dispatch + removed 'on commit' trigger in github actions worflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,8 @@
 name: ci
 
 on:
-  push:
-    branches:
-      - "ci"
+  workflow_dispatch:
+
 env:
   REPO_NAME: 'fredmoser'
   APP_NAME: 'accessmod'
