--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,15 @@ jobs:
     runs-on: macos-13
     name: Run Packer on macOS
     steps:
+
       - name: Checkout
         uses: actions/checkout@v3
-        
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          detached: true
+
       - name: Install VirtualBox
         run: |
           brew install --cask virtualbox
