--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,8 @@ jobs:
 
       - name: Install VirtualBox
         run: | 
-          apt-get update
-          apt-get install -y virtualbox
+          sudo apt-get update
+          sudo apt-get install -y virtualbox
 
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
