Packer CI, try installing vbox 7 from oracle directly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,9 +50,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install VirtualBox
-        run: | 
-          sudo apt-get update
-          sudo apt-get install -y virtualbox
+        run: |
+        wget -q https://www.virtualbox.org/download/oracle_vbox_2016.asc -O- | sudo apt-key add -
+        wget -q https://www.virtualbox.org/download/oracle_vbox.asc -O- | sudo apt-key add -
+        sudo add-apt-repository "deb [arch=amd64] http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib"
+        sudo apt-get update
+        sudo apt-get install -y virtualbox-7.0     
 
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
