--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,11 +51,11 @@ jobs:
 
       - name: Install VirtualBox
         run: |
-        wget -q https://www.virtualbox.org/download/oracle_vbox_2016.asc -O- | sudo apt-key add -
-        wget -q https://www.virtualbox.org/download/oracle_vbox.asc -O- | sudo apt-key add -
-        sudo add-apt-repository "deb [arch=amd64] http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib"
-        sudo apt-get update
-        sudo apt-get install -y virtualbox-7.0     
+        'wget -q https://www.virtualbox.org/download/oracle_vbox_2016.asc -O- | sudo apt-key add -'
+        'wget -q https://www.virtualbox.org/download/oracle_vbox.asc -O- | sudo apt-key add -'
+        'sudo add-apt-repository "deb [arch=amd64] http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib"'
+        'sudo apt-get update'
+        'sudo apt-get install -y virtualbox-7.0'
 
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
