--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,5 +77,6 @@ jobs:
       - name: Upload OVA
         uses: actions/upload-artifact@v3
         with:
-          name: packer-image
-          path: packer/_build/*.ova
+          name: accessmod_vm
+          path: packer/_build
+          compression-level: 0
